<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/gehe_zu_toggle_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_gehe_zu_toggle_activity" />

    <Button
        android:id="@+id/gehe_zu_single_choice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_gehe_zu_single_choice" />

    <Button
        android:id="@+id/gehe_zu_multi_choice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_gehe_zu_multi_choice" />

    <Button
        android:id="@+id/gehe_zu_farbwahl_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_gehe_zu_farbwahl" />

</LinearLayout>
